--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "_app/immutable/start-a7d64736.js",
+    "file": "_app/immutable/start-f788a011.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-03969575.js"
+      "_index-03969575.js",
+      "_paths-b9644fda.js"
     ],
     "dynamicImports": [
       ".svelte-kit/runtime/components/layout.svelte",
@@ -41,15 +42,19 @@
     ]
   },
   "src/routes/index.svelte": {
-    "file": "_app/immutable/pages/index.svelte-886d09aa.js",
+    "file": "_app/immutable/pages/index.svelte-ad5be0a1.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-03969575.js"
+      "_index-03969575.js",
+      "_paths-b9644fda.js"
     ]
   },
   "_index-03969575.js": {
     "file": "_app/immutable/chunks/index-03969575.js"
+  },
+  "_paths-b9644fda.js": {
+    "file": "_app/immutable/chunks/paths-b9644fda.js"
   }
 }
