--- a/manifest.json
+++ b/manifest.json
@@ -1,60 +1,62 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "_app/immutable/start-821b6d46.js",
+    "file": "_app/immutable/start-1333db6d.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-03969575.js",
-      "_paths-b9644fda.js"
+      "_index-60a08cf8.js"
     ],
     "dynamicImports": [
-      ".svelte-kit/runtime/components/layout.svelte",
+      "src/routes/__layout.svelte",
       ".svelte-kit/runtime/components/error.svelte",
       "src/routes/about.svelte",
       "src/routes/index.svelte"
     ]
   },
-  ".svelte-kit/runtime/components/layout.svelte": {
-    "file": "_app/immutable/layout.svelte-818fd2cb.js",
-    "src": ".svelte-kit/runtime/components/layout.svelte",
+  "src/routes/__layout.svelte": {
+    "file": "_app/immutable/pages/__layout.svelte-1c4c0202.js",
+    "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-03969575.js"
+      "_index-60a08cf8.js"
+    ],
+    "css": [
+      "_app/immutable/assets/__layout-1a2accf1.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "_app/immutable/error.svelte-c7c45682.js",
+    "file": "_app/immutable/error.svelte-ad22691e.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-03969575.js"
+      "_index-60a08cf8.js"
     ]
   },
   "src/routes/about.svelte": {
-    "file": "_app/immutable/pages/about.svelte-78c34a76.js",
+    "file": "_app/immutable/pages/about.svelte-276df77d.js",
     "src": "src/routes/about.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-03969575.js"
+      "_index-60a08cf8.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "_app/immutable/pages/index.svelte-ad5be0a1.js",
+    "file": "_app/immutable/pages/index.svelte-fc4de4a8.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-03969575.js",
-      "_paths-b9644fda.js"
+      "_index-60a08cf8.js"
     ]
   },
-  "_index-03969575.js": {
-    "file": "_app/immutable/chunks/index-03969575.js"
+  "_index-60a08cf8.js": {
+    "file": "_app/immutable/chunks/index-60a08cf8.js"
   },
-  "_paths-b9644fda.js": {
-    "file": "_app/immutable/chunks/paths-b9644fda.js"
+  "src/routes/__layout.css": {
+    "file": "_app/immutable/assets/__layout-1a2accf1.css",
+    "src": "src/routes/__layout.css"
   }
 }
