--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"sass": "^1.63.6",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
+		"svelte-i18n": "^3.7.0",
 		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
