--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"dotenv": "^16.0.1"
+		"dotenv": "^16.0.1",
+		"intl-messageformat": "^10.5.3"
 	}
 }
