--- a/.release-it.json
+++ b/.release-it.json
@@ -14,11 +14,41 @@
         "types": [
           {
             "type": "feat",
-            "section": "Features"
+            "section": "✨ Features"
           },
           {
             "type": "fix",
-            "section": "Bug Fixes"
+            "section": "🐛 Bug Fixes"
+          },
+          {
+            "type": "chore",
+            "hidden": false,
+            "section": "🚚 Chores"
+          },
+          {
+            "type": "docs",
+            "hidden": false,
+            "section": "📝 Documentation"
+          },
+          {
+            "type": "style",
+            "hidden": false,
+            "section": "💄 Styling"
+          },
+          {
+            "type": "refactor",
+            "hidden": false,
+            "section": "♻️ Code Refactoring"
+          },
+          {
+            "type": "perf",
+            "hidden": false,
+            "section": "⚡️ Performance Improvements"
+          },
+          {
+            "type": "test",
+            "hidden": false,
+            "section": "✅ Testing"
           }
         ]
       }
