--- a/package.json
+++ b/package.json
@@ -1,55 +1,21 @@
 {
-  "name": "portfolio",
-  "version": "0.3.0",
-  "scripts": {
-    "deploy": "node ./gh-pages.js",
-    "clean": "node clean-build.js",
-    "dev": "vite dev",
-    "build": "vite build",
-    "package": "svelte-kit package",
-    "preview": "vite preview",
-    "test": "playwright test",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
-    "format": "prettier --write --plugin-search-dir=. .",
-    "commitlint": "commitlint --edit",
-    "release": "release-it"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.8.0",
-    "@commitlint/config-conventional": "^17.8.0",
-    "@fontsource/fira-mono": "^4.5.10",
-    "@neoconfetti/svelte": "^1.0.0",
-    "@playwright/test": "^1.28.1",
-    "@release-it/conventional-changelog": "^7.0.2",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-static": "^2.0.3",
-    "@sveltejs/kit": "^1.20.4",
-    "@types/cookie": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.30.0",
-    "gh-pages": "^6.0.0",
-    "husky": "^8.0.3",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
-    "release-it": "^16.2.1",
-    "sass": "^1.63.6",
-    "svelte": "^4.0.0",
-    "svelte-check": "^3.4.3",
-    "svelte-i18n": "^3.7.0",
-    "svelte-preprocess": "^5.0.4",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.3.6",
-    "vitest": "^0.25.3"
-  },
+  "name": "astro",
   "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "intl-messageformat": "^10.5.3"
+    "@astrojs/check": "^0.3.4",
+    "@astrojs/svelte": "^5.0.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.0.8",
+    "svelte": "^4.2.8",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
