--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "astro",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/svelte": "^5.0.3",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.0.8",
-    "svelte": "^4.2.8",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
-  }
+	"name": "astro",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.3.4",
+		"@astrojs/mdx": "^2.0.3",
+		"@astrojs/rss": "^4.0.1",
+		"@astrojs/sitemap": "^3.0.4",
+		"@astrojs/svelte": "^5.0.3",
+		"@astrojs/tailwind": "^5.1.0",
+		"astro": "^4.0.8",
+		"svelte": "^4.2.8",
+		"tailwindcss": "^3.4.0",
+		"typescript": "^5.3.3"
+	}
 }
