--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.4",
-    "@astrojs/mdx": "^2.0.3",
-    "@astrojs/rss": "^4.0.1",
-    "@astrojs/sitemap": "^3.0.4",
-    "@astrojs/svelte": "^5.0.3",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.0.8",
-    "svelte": "^4.2.8",
+    "@astrojs/check": "0.9.5",
+    "@astrojs/mdx": "4.3.10",
+    "@astrojs/rss": "4.0.13",
+    "@astrojs/sitemap": "3.6.0",
+    "@astrojs/svelte": "7.2.2",
+    "@astrojs/tailwind": "6.0.2",
+    "astro": "5.15.4",
+    "svelte": "^5.43.4",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
