--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@astrojs/rss": "4.0.13",
     "@astrojs/sitemap": "3.6.0",
     "@astrojs/svelte": "7.2.2",
-    "@astrojs/tailwind": "6.0.2",
+    "@tailwindcss/vite": "^4.1.17",
     "astro": "5.15.4",
     "svelte": "^5.43.4",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.3.3"
   },
   "module": "index.ts",
